git4idea:IDEADEV-34882: now user is notified when invalid roots are configured

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -105,6 +105,12 @@ find.git.error.title=Error Running git
 find.git.success.title=Git Executed Successfully
 find.git.title=Git Configuration
 find.git.unsupported.message=<html><tt>{0}</tt><br>This version is unsupported, and some plugin functionality could fail to work.<br>The minimal supported version is <em>{1}</em>.</html>
+fix.roots.button=Accept
+fix.roots.list.tooltip=The suggested list of Git VCS roots, new roots are marked as bold, removed roots are marked as overstriked.
+fix.roots.message=The following Git vcs roots will be used instead of the current Git VCS roots.
+fix.roots.title=Fix Git VCS Roots
+fix.roots.valid.message=The invalid Git roots have been fixed already.
+fix.roots.valid.title=All Git Roots Are Valid
 getting.history=Getting history for {0}
 git.default.commit.message=\n# Brief commit description here\n\n# Full commit description here (comment lines starting with '#' will not be included)\n\n
 git.error.exit=The git process exited with the code {0}
@@ -283,6 +289,7 @@ reset.validate=&Validate
 resetting.title=Resetting HEAD...
 revert.action.name=Revert
 revision.graph=RevisionGraph
+root.tracker.message=Some configured Git VCS roots are not under Git or have Git repsoitories in subdirectories without configured VCS root.
 select.branch.to.checkout=Select branch to checkout
 show.all.paths.affected.action.name=Show All Affected Paths
 ssh.ask.passphrase.title=SSH Key Passphrase
