git4idea: Fixed some spelling errors in messages

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -29,7 +29,7 @@ checkout.new.branch=As &new branch
 checkout.override.branch=&Override
 checkout.override.tooltip=If ckecked a branch will be created even if a branch with the same name already exists. The previous branch will be deleted.
 checkout.ref.tooltip=Select branch, tag, or enter commit reference
-checkout.retriving.branches.and.tags=Retriving branches and tags
+checkout.retrieving.branches.and.tags=Retrieving branches and tags
 checkout.track.branch=&Track branch
 checkout.track.tooltip=If checked, the newly created branch will track original branch during pull.
 checkout.validate.tooltip=Use this button to validate reference expression if entered manually.
@@ -142,7 +142,7 @@ merge.no.commit.tooltip=Force no commit for merge (the \"--no-commit\" option)
 merge.no.commit=No &commit
 merge.no.fast.forward.tooltip=Disable fast forward (\"--no-ff\" option)
 merge.no.fast.forward=No &fast forward
-merge.retriving.branches=Retriving unmerged branches
+merge.retrieving.branches=Retrieving unmerged branches
 merge.squash.commit=S&quash commit
 merge.squash.tooltip=Squash all changes into the single commit (\"--squash\" option)
 merge.strategy.tooltip=The merge strategy to use (\"-s\" option)
@@ -163,7 +163,7 @@ pull.get.branches=&Get Branches
 pull.getting.remote.branches=Getting remote branches
 pull.remote.tooltip=Registered remote name or URL.
 pull.remote=Re&mote:
-pull.retriving.remotes=Retriving remotes
+pull.retrieving.remotes=Retrieving remotes
 pull.title=Pull changes
 pull.url.message=Enter remote repository URL to pull/merge (empty for default):
 pull.url.title=Pull URL
