git4idea: IDEADEV-37127: it is now possible to use native ssh with git, provided that it is correctly configured

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -116,6 +116,10 @@ git.default.commit.message=\n# Brief commit description here\n\n# Full commit de
 git.error.exit=The git process exited with the code {0}
 git.running=<html>Running: {0}</html>
 git.vcs.config.path.label=Path to &git executable:
+git.vcs.config.ssh.mode.idea=IDEA ssh
+git.vcs.config.ssh.mode.native=Native
+git.vcs.config.ssh.mode.tooltip=<html>Specify which version of SSH to be used with git.<ul><li><b>Native</b> means that the native ssh will be used.</li><li><b>IDEA SSH</b> means that the implementation provided by the IDEA will be used.</li></ul>The native implementation might cause hangups on some platforms. In native case, you also might need to configure <em>ssh-askpass</em> for your platform to recieve GUI promopts for passwords.</html>
+git.vcs.config.ssh.mode=&SSH executable:
 git.vcs.config.test.label=Test 
 git.vcs.config.test=&Test
 index.file.error=Updating file in the index failed
