git4idea: Implemeted forced merge/rebase and stash options for update operation

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -371,6 +371,22 @@ unstash.title=UnStash Changes
 unstash.view.tooltip=View selected stash
 unstash.view=&View
 unstashing.title=UnStashing changes...
+update.options.display.name=Git Update Settings
+update.options.no.commit=No &Commit
+update.options.stash.tooltip=If selected, the current changes will be stashed before update, and than restored after update.
+update.options.stash=&Stash changes before update
+update.options.type.default=Branch Default
+update.options.type.merge=Force Merge
+update.options.type.rebase=Force Rebase
+update.options.type.tooltip=Force update type (merge or rebase) or use branch default configuration
+update.options.type=&Type:
+update.rebase.no.change.cancel=Cancel Update
+update.rebase.no.change.retry=Retry Continue
+update.rebase.no.change.skip=Skip Commit
+update.rebase.no.change.title=No Changes Staged
+update.rebase.no.change=<html>No changes detected <tt>{0}</tt>. <ul><li>Skip Commit - skips current commit in the rebase process</li><li>Retry Continue - do it after you add changes to commit manually</li><li>Or cancel cancels update process for this root.</li></ul></html>
+update.rebase.unmerged.title=Unresolved Rebase Conflicts
+update.rebase.unmerged=<html><b>{0}</b> file(s) are not yet merged. Repeat merge operation (no cancels update for root <tt>{1}</tt>?</html>
 util.remote.renderer.default=<html><b>{0}</b>(<i>{1}</i>)</html>
 util.remote.renderer.none=<html><i>None</i></html>
 util.remote.renderer.normal=<html><b>{0}</b>(<i>{1}</i>)</html>
