git4idea: Added support for checking locally modified files

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -371,6 +371,14 @@ unstash.title=UnStash Changes
 unstash.view.tooltip=View selected stash
 unstash.view=&View
 unstashing.title=UnStashing changes...
+update.locally.modified.files.tooltip=The list of files that are considered to be locally modified.
+update.locally.modified.files=&Files:
+update.locally.modified.git.root=Git Root:
+update.locally.modified.message=<html>The following files under this root are locally modified.<br/>Likely there is a problem with crlf conversion<br/>or IDEA managed to save a configuration file,<br/> and these changes should be just reverted.</html>
+update.locally.modified.rescan.tooltip=<html>Rescan directory to check if there are still locally modified files.<br/>Use this button if you have resolved problem manually.</html>
+update.locally.modified.rescan=Re&scan
+update.locally.modified.revert=Revert Files
+update.locally.modified.title=Locally modified files are detected
 update.options.display.name=Git Update Settings
 update.options.no.commit=No &Commit
 update.options.stash.tooltip=If selected, the current changes will be stashed before update, and than restored after update.
