--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -374,7 +374,7 @@ unstashing.title=UnStashing changes...
 update.locally.modified.files.tooltip=The list of files that are considered to be locally modified.
 update.locally.modified.files=&Files:
 update.locally.modified.git.root=Git Root:
-update.locally.modified.message=<html>The following files under this root are locally modified.<br/>Likely there is a problem with crlf conversion<br/>or IDEA managed to save a configuration file,<br/> and these changes should be just reverted.</html>
+update.locally.modified.message=<html>The following files under this root are locally modified. The following might have happened:<ul><li>Either you have not selected, auto-stash option, and rebase process will likely fail in this case<br/>(use cancell in this case).</li><li>There is a problem with crlf conversion (use revert in this case)</li><li>IDEA managed to save a configuration file (use revert in this case).</html>
 update.locally.modified.rescan.tooltip=<html>Rescan directory to check if there are still locally modified files.<br/>Use this button if you have resolved problem manually.</html>
 update.locally.modified.rescan=Re&scan
 update.locally.modified.revert=Revert Files
@@ -382,11 +382,11 @@ update.locally.modified.title=Locally modified files are detected
 update.options.display.name=Git Update Settings
 update.options.no.commit=No &Commit
 update.options.stash.tooltip=If selected, the current changes will be stashed before update, and than restored after update.
-update.options.stash=&Stash changes before update
+update.options.stash=Auto-&stash
 update.options.type.default=Branch Default
 update.options.type.merge=Force Merge
 update.options.type.rebase=Force Rebase
-update.options.type.tooltip=Force update type (merge or rebase) or use branch default configuration
+update.options.type.tooltip=Force update type (merge or rebase) or use branch default configuration.
 update.options.type=&Type:
 update.rebase.no.change.cancel=Cancel Update
 update.rebase.no.change.retry=Retry Continue
