git4idea: Added push active branches functionality

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -173,6 +173,28 @@ pull.url.message=Enter remote repository URL to pull/merge (empty for default):
 pull.url.title=Pull URL
 pulling.title=Pulling changes from {0}
 push.action.name=Push
+push.active.action.name=Push Active Branches
+push.active.button=Push
+push.active.commit.node=<html><span style="color: #7f7f7f">{0}</span>: {1}</html>
+push.active.commits=&Commits:
+push.active.error.behind=Some local branches are behind remote branches
+push.active.error.no.branch=Some roots are not on the branch
+push.active.fetch.failed.title=Fetch Failed
+push.active.fetch.failed=The fetch operation failed for some branches
+push.active.fetching=Fetching changes for active branches
+push.active.pushing=Pushing branches...
+push.active.root.node.behind=<html><span style="color: red"><b>{0}</b>[{1} -> {2}#{3}]</span></html>
+push.active.root.node.no.branch=<html><span style="color: red"><b>{0}</b></span></html>
+push.active.root.node.no.commits=<html><span style="color: #7f7f7f"><b>{0}</b>[{1} -> {2}#{3}]</span></html>
+push.active.root.node.no.tracked=<html><span style="color: #7f7f7f"><b>{0}</b>[{1}]</span></html>
+push.active.root.node.push=<html><b>{0}</b>[{1} -> {2}#{3}]</html>
+push.active.status.behind=<html>Status: <span style="color: red">Unable to push. The current branch is behind tracked branch by {0} commit(s).</span></html>
+push.active.status.no.branch=<html>Status: <span style="color: red">The head is not on the branch.</span></html>
+push.active.status.no.commits=<html>Status: <span style="color: #7f7f7f">Nothing to push.</span></html>
+push.active.status.no.tracked=<html>Status: <span style="color: #7f7f7f">No tracked branch is configured.</span></html>
+push.active.status.push=<html>Status: The {0} commit(s) will be pushed.</html>
+push.active.title=Push Active Branches
+push.active.view=&View
 push.branches.tooltip=Select branches to push
 push.branches=&Branches:
 push.button=Push
