git4idea: IDEADEV-40639: fixed typo

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -192,7 +192,7 @@ push.active.status.behind=<html>Status: <span style="color: red">Unable to push.
 push.active.status.no.branch=<html>Status: <span style="color: red">The head is not on the branch.</span></html>
 push.active.status.no.commits=<html>Status: <span style="color: #7f7f7f">Nothing to push.</span></html>
 push.active.status.no.tracked=<html>Status: <span style="color: #7f7f7f">No tracked branch is configured.</span></html>
-push.active.status.push=<html>Status: The {0} commit(s) will be pushed.</html>
+push.active.status.push=<html>Status: {0} commit(s) will be pushed.</html>
 push.active.title=Push Active Branches
 push.active.view=&View
 push.branches.tooltip=Select branches to push
