git4idea: IDEADEV-40016: fixed typo

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -315,7 +315,8 @@ reset.validate=&Validate
 resetting.title=Resetting HEAD...
 revert.action.name=Revert
 revision.graph=RevisionGraph
-root.tracker.message=Some configured Git VCS roots are not under Git or have Git repositories in subdirectories without configured VCS root.
+root.tracker.message.title=Invalid Git roots
+root.tracker.message=<p>Some configured Git VCS roots are not under Git or have Git repositories in subdirectories without configured VCS root. <a href="">Configure.</a></p>
 select.branch.to.checkout=Select branch to checkout
 show.all.paths.affected.action.name=Show All Affected Paths
 ssh.ask.passphrase.title=SSH Key Passphrase
