git4idea: IDEADEV-40667: added new status to Push Active Branches dialog when directory is behind, but there is no commits to push

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -190,6 +190,7 @@ push.active.root.node.no.tracked=<html><span style="color: #7f7f7f"><b>{0}</b>[{
 push.active.root.node.push=<html><b>{0}</b>[{1} -> {2}#{3}]</html>
 push.active.status.behind=<html>Status: <span style="color: red">Unable to push. The current branch is behind tracked branch by {0} commit(s).</span></html>
 push.active.status.no.branch=<html>Status: <span style="color: red">The head is not on the branch.</span></html>
+push.active.status.no.commits.behind=<html>Status: <span style="color: #7f7f7f">Nothing to push. The current branch is behind tracked branch by {0} commit(s).</span></html>
 push.active.status.no.commits=<html>Status: <span style="color: #7f7f7f">Nothing to push.</span></html>
 push.active.status.no.tracked=<html>Status: <span style="color: #7f7f7f">No tracked branch is configured.</span></html>
 push.active.status.push=<html>Status: {0} commit(s) will be pushed.</html>
