git4idea: IDEADEV-40758: Added check for rebase in progress for vcs roots

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -419,6 +419,10 @@ update.rebase.no.change.title=No Changes Staged
 update.rebase.no.change=<html>No changes detected <tt>{0}</tt>. <ul><li>Skip Commit - skips current commit in the rebase process</li><li>Retry Continue - do it after you add changes to commit manually</li><li>Or cancel cancels update process for this root.</li></ul></html>
 update.rebase.unmerged.title=Unresolved Rebase Conflicts
 update.rebase.unmerged=<html><b>{0}</b> file(s) are not yet merged. Repeat merge operation (no cancels update for root <tt>{1}</tt>?</html>
+update.root.rebasing.item=<li>{0}</li>
+update.root.rebasing.message=<html>The following roots have unfinished rebase process. Update is not possible.<ul>{0}</u></html>
+update.root.rebasing.title=Unfinished Rebase Process
+update.root.rebasing=The root {0} has unfinished rebase process.
 util.remote.renderer.default=<html><b>{0}</b>(<i>{1}</i>)</html>
 util.remote.renderer.none=<html><i>None</i></html>
 util.remote.renderer.normal=<html><b>{0}</b>(<i>{1}</i>)</html>
