git4idea: Added dialog that offers conversion to project's line separators

--- a/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
+++ b/plugins/git4idea/src/git4idea/i18n/GitBundle.properties
@@ -64,10 +64,18 @@ commit.push.changes.tooltip=When this option is enabled, changes are pushed to t
 commit.push.changes=&Push Changes
 common.current.branch.tooltip=The currently checked out branch.
 common.current.branch=Current Branch:
+common.do.not.show.tooltip=If this option is selected, the choice will be remembered, and the dialog will not be shown again.
+common.do.not.show=&Do not show this dialog again
 common.git.root.tooltip=Select git vcs root
 common.git.root=Git &Root:
 common.no.active.branch=<no active branch>
 computing.annotation=Computing annotation for {0}
+crlf.convert.convert=Convert
+crlf.convert.label=<html>&The following text files have line separator that do not match the project line separator.<br/>Select files you wish to covert to project default line separators before commit.</html>
+crlf.convert.leave=Leave Unchanged
+crlf.convert.none.tooltip=If this option is selected, the file are not attempted to be converted before commit.
+crlf.convert.none=Do &not convert files
+crlf.convert.title=Invalid Line Separators
 current.branch.action.name=CurrentBranch
 current.branch.change.tracked=Change Tracked Branch
 current.branch.message=Checked out branch: {0}
@@ -115,6 +123,12 @@ getting.history=Getting history for {0}
 git.default.commit.message=\n# Brief commit description here\n\n# Full commit description here (comment lines starting with '#' will not be included)\n\n
 git.error.exit=The git process exited with the code {0}
 git.running=<html>Running: {0}</html>
+git.vcs.config.convert.ask.tooltip=If this checkbox is specified, the user will be show a list of file to be converted.
+git.vcs.config.convert.ask=Ask before con&versions
+git.vcs.config.convert.crlf=&Convert Text Files:
+git.vcs.config.convert.do.not.convert=Do not convert
+git.vcs.config.convert.project=Convert to project's line separators
+git.vcs.config.convert.tooltip=<html>Convert text files on commit:<ul><li><b>Do not convert</b> - do not covert sources</li><li><b>Convert to project line separators</b> - the sourcers are converted to line separators that are specified in the project's code style.</li></ul></html>
 git.vcs.config.path.label=Path to &git executable:
 git.vcs.config.ssh.mode.idea=IDEA ssh
 git.vcs.config.ssh.mode.native=Native
