--- a/plugins/gradle/resources/i18n/GradleBundle.properties
+++ b/plugins/gradle/resources/i18n/GradleBundle.properties
@@ -54,6 +54,11 @@ gradle.sync.change.type.intellij={0} local setting
 gradle.sync.change.type.conflict=Settings conflict
 gradle.sync.change.type.unchanged=Unchanged setting
 gradle.sync.change.type.confirmed=Confirmed settings diff
+gradle.sync.change.entity.type.module=module
+gradle.sync.change.entity.type.library.dependency=library dependency
+gradle.sync.change.library.path=library ''{0}'' binary path
+gradle.sync.change.project.name.text=project name
+gradle.sync.change.project.language.level.text=project language level change
 
 gradle.library.resolve.progress.text=Resolving gradle libraries
 
