IDEA-76142: Gradle support - cannot update IDEA projects once one of build.gradle files changes
1. Introduced 'import gradle entity' infrastructure;
2. Implemented 'import gradle library dependency';

--- a/plugins/gradle/resources/i18n/GradleBundle.properties
+++ b/plugins/gradle/resources/i18n/GradleBundle.properties
@@ -77,6 +77,8 @@ gradle.action.refresh.project.text=Refresh gradle project
 gradle.action.refresh.project.description=Allows to force linked gradle project refresh
 gradle.action.open.script.text=Open linked gradle project
 gradle.action.open.script.description=Allows to open project file of the linked gradle project at the editor
+gradle.action.import.entity.text=Import
+gradle.action.import.entity.description=Import target gradle entity
 
 gradle.settings.color.text.sample.conflict.node.name=node-with-conflicting-setup
 gradle.settings.color.text.sample.node.sync.name=node-with-same-setup
