--- a/tools/lexer/CHANGES
+++ b/tools/lexer/CHANGES
@@ -8,3 +8,4 @@ https://github.com/jflex-de/jflex/tree/de2312d6891de7fdf2752ad8e0a45983202ad5e0
 "Return exit code 0 for --{help,version,info}" committed on Feb 29 by lsf37
 
 1. Emitter.java: zzBufferL is treated as CharSequence instead of char[]
+2. Emitter.java: try using reduced ZZ_CMAP if maxCodePoint is greater than 0xffff
