IJPL-232410 Remove toml multi-line inline table annotation

--- a/plugins/toml/tests/src/test/resources/org/toml/lang/parse/fixtures/inlineTables.toml
+++ b/plugins/toml/tests/src/test/resources/org/toml/lang/parse/fixtures/inlineTables.toml
@@ -1,2 +1,13 @@
 name = { first = "Tom", last = "Preston-Werner" }
 point = { x = 1, y = 2 }
+animal = { type.name = "pug" }
+contact = {
+    personal = {
+        name = "Donald Duck",
+        email = "donald@duckburg.com",
+    },
+    work = {
+        name = "Coin cleaner",
+        email = "donald@ScroogeCorp.com",
+    },
+}
