--- a/plugins/toml/tests/src/test/resources/org/toml/lang/parse/fixtures/inlineTables.txt
+++ b/plugins/toml/tests/src/test/resources/org/toml/lang/parse/fixtures/inlineTables.txt
@@ -64,3 +64,109 @@ TOML File
           PsiElement(NUMBER)('2')
       PsiWhiteSpace(' ')
       PsiElement(})('}')
+  TomlKeyValue
+      TomlKey
+        TomlKeySegment
+          PsiElement(BARE_KEY)('animal')
+      PsiWhiteSpace(' ')
+      PsiElement(=)('=')
+      PsiWhiteSpace(' ')
+      TomlInlineTable
+        PsiElement({)('{')
+        PsiWhiteSpace(' ')
+        TomlKeyValue
+          TomlKey
+            TomlKeySegment
+              PsiElement(BARE_KEY)('type')
+            PsiElement(.)('.')
+            TomlKeySegment
+              PsiElement(BARE_KEY)('name')
+          PsiWhiteSpace(' ')
+          PsiElement(=)('=')
+          PsiWhiteSpace(' ')
+          TomlLiteral
+            PsiElement(STRING)('"pug"')
+        PsiWhiteSpace(' ')
+        PsiElement(})('}')
+  PsiWhiteSpace('\n')
+  TomlKeyValue
+      TomlKey
+        TomlKeySegment
+          PsiElement(BARE_KEY)('contact')
+      PsiWhiteSpace(' ')
+      PsiElement(=)('=')
+      PsiWhiteSpace(' ')
+      TomlInlineTable
+        PsiElement({)('{')
+        PsiWhiteSpace('\n    ')
+        TomlKeyValue
+          TomlKey
+            TomlKeySegment
+              PsiElement(BARE_KEY)('personal')
+          PsiWhiteSpace(' ')
+          PsiElement(=)('=')
+          PsiWhiteSpace(' ')
+          TomlInlineTable
+            PsiElement({)('{')
+            PsiWhiteSpace('\n        ')
+            TomlKeyValue
+              TomlKey
+                TomlKeySegment
+                  PsiElement(BARE_KEY)('name')
+              PsiWhiteSpace(' ')
+              PsiElement(=)('=')
+              PsiWhiteSpace(' ')
+              TomlLiteral
+                PsiElement(STRING)('"Donald Duck"')
+            PsiElement(,)(',')
+            PsiWhiteSpace('\n        ')
+            TomlKeyValue
+              TomlKey
+                TomlKeySegment
+                  PsiElement(BARE_KEY)('email')
+              PsiWhiteSpace(' ')
+              PsiElement(=)('=')
+              PsiWhiteSpace(' ')
+              TomlLiteral
+                PsiElement(STRING)('"donald@duckburg.com"')
+            PsiElement(,)(',')
+            PsiWhiteSpace('\n    ')
+            PsiElement(})('}')
+        PsiElement(,)(',')
+        PsiWhiteSpace('\n    ')
+        TomlKeyValue
+          TomlKey
+            TomlKeySegment
+              PsiElement(BARE_KEY)('work')
+          PsiWhiteSpace(' ')
+          PsiElement(=)('=')
+          PsiWhiteSpace(' ')
+          TomlInlineTable
+            PsiElement({)('{')
+            PsiWhiteSpace('\n        ')
+            TomlKeyValue
+              TomlKey
+                TomlKeySegment
+                  PsiElement(BARE_KEY)('name')
+              PsiWhiteSpace(' ')
+              PsiElement(=)('=')
+              PsiWhiteSpace(' ')
+              TomlLiteral
+                PsiElement(STRING)('"Coin cleaner"')
+            PsiElement(,)(',')
+            PsiWhiteSpace('\n        ')
+            TomlKeyValue
+              TomlKey
+                TomlKeySegment
+                  PsiElement(BARE_KEY)('email')
+              PsiWhiteSpace(' ')
+              PsiElement(=)('=')
+              PsiWhiteSpace(' ')
+              TomlLiteral
+                PsiElement(STRING)('"donald@ScroogeCorp.com"')
+            PsiElement(,)(',')
+            PsiWhiteSpace('\n    ')
+            PsiElement(})('}')
+        PsiElement(,)(',')
+        PsiWhiteSpace('\n')
+        PsiElement(})('}')
